maze.lessons.maze.island.IslandMaze.scala.error
Escaper:15: error: illegal start of simple expression
      	}
        ^Escaper:16: error: 'while' expected but '}' found.
   	 }
         ^